--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -158,7 +158,146 @@ img{
     color: #FFFF;
 }
 
+.hamburger {
+    display: none;
+}
 
+.navMenu {
+    display: none;
+}
+
+
+
+
+/*!*MOBILE RESPONSIVENESS*!*/
+@media only screen and (max-width: 1130px) and (min-width: 320px) {
+
+
+    .mainBox {
+        height: 100px;
+        width: 100%;
+        max-width: 1512px;
+        display: flex;
+        align-items: flex-end;
+        justify-content: center;
+        position: sticky;
+        background-color: #FFF;
+        padding-bottom: 10px;
+        z-index: 55;
+
+    }
+
+    .headerBox {
+        height: 70px;
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .right{
+        display: flex;
+        align-items: center;
+        height: 70px;
+        gap: 110px;
+    }
+
+    img{
+        width: 38px;
+        height: 38.927px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .middle {
+        display: none;
+    }
+
+    .btn {
+        display: none;
+    }
+
+    .left {
+        border: none;
+    }
+
+    .hamburger {
+                display: block;
+            }
+
+    .navMenu {
+        display: block;
+    }
+
+            .nav-menu {
+                position: fixed;
+                left: -200%; /* hides hamburger menu when not toggled */
+                top: 83px;
+                flex-direction: column;
+                background: linear-gradient(
+                            180deg,
+                            #5B56BD 0%,
+                            #293285 50%,
+                            #0A004A 100%);
+                width: 100%;
+                height: 90vh;
+                z-index: 20;
+                text-align: center;
+                transition: .3s;
+            }
+
+            .nav-menu a {
+                text-decoration: none
+            }
+
+            .nav-menu.active {
+                left: 0;
+            }
+
+            .nav-item {
+                margin: 1.5rem 0;
+            }
+
+            .header .navbar img {
+                width: 150px;
+            }
+
+    .dropDown   {
+        color: white;
+    }
+
+    .dropDown:hover {
+        cursor: pointer;
+    }
+
+    .mobileBtn {
+        display: flex;
+        width: 210px;
+        height: 60px;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+        color: var(--White, #FFF);
+        text-align: center;
+        font-feature-settings: 'clig' off, 'liga' off;
+        font-family: Gotham;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 38px; /* 237.5% */
+        text-transform: uppercase;
+        border: 1px solid var(--White, #FFF);
+    }
+
+    .mobileBtn:hover {
+        background: none;
+        color: #FFFF;
+        cursor: pointer;
+        border: 1px solid var(--White, #FFF);
+    }
+
+}
 
 
 
